<resources>
    <string name="app_name">AndoidServices</string>
    <string name="screen_title">Android services</string>
    <string name="service">Service</string>
    <string name="foreground_service">foreground service</string>
    <string name="intent_service">intent service</string>
    <string name="job_scheduler">job scheduler</string>
    <string name="job_intent_service">job intent service</string>
    <string name="alarm_manager">alarm manager</string>
    <string name="work_manager">work manager</string>
    <string name="stop_foreground_service">Stop it</string>
    <string name="tagged_work_manager">tagged work manager</string>
</resources>